# hladjevlkcz

./: .gitignore  .gitmodules  Makefile  docker-compose.yml
backend/: Dockerfile
backend/app/: __init__.py  routes.py
backend/app/logs/: skm_json3-23-11-2022--13:36:53.json  skm_json3-23-11-2022--13:36:55.json  skm_json3-23-11-2022--13:41:55.json  skm_json3-23-11-2022--13:46:55.json  skm_json3-23-11-2022--13:51:55.json  skm_json3-23-11-2022--13:52:42.json  skm_json3-23-11-2022--13:52:43.json  skm_json3-23-11-2022--13:52:45.json  skm_json3-23-11-2022--13:57:44.json  skm_json3-23-11-2022--13:57:45.json  skm_json3-23-11-2022--14:02:44.json  skm_json3-23-11-2022--14:02:45.json  skm_json3-23-11-2022--14:07:42.json  skm_json3-23-11-2022--14:07:43.json  skm_json3-23-11-2022--14:07:44.json  skm_json3-23-11-2022--14:07:45.json  skm_json3-23-11-2022--14:12:44.json  skm_json3-23-11-2022--14:12:45.json  skm_json3-23-11-2022--14:17:44.json  skm_json3-23-11-2022--14:17:45.json  skm_json3-23-11-2022--14:22:44.json  skm_json3-23-11-2022--14:27:44.json  skm_json3-23-11-2022--14:32:44.json  skm_json3-23-11-2022--14:33:19.json  skm_json3-23-11-2022--14:37:44.json  skm_json3-23-11-2022--14:38:19.json  skm_json3-23-11-2022--14:42:44.json  skm_json3-23-11-2022--14:43:19.json  skm_json3-23-11-2022--14:47:44.json  skm_json3-23-11-2022--14:48:19.json  skm_json3-23-11-2022--14:52:44.json  skm_json3-23-11-2022--14:53:02.json  skm_json3-23-11-2022--16:17:25.json  skm_json3-23-11-2022--16:17:27.json  skm_json3-23-11-2022--16:17:28.json  skm_json3-23-11-2022--16:17:55.json  skm_json3-23-11-2022--16:17:56.json  skm_json3-23-11-2022--16:17:57.json  skm_json3-23-11-2022--16:17:58.json  skm_json3-23-11-2022--16:22:12.json  (+734 more)
backend/app/schemas/: schemas.py
backend_ds/: .env  Cargo.toml
backend_ds/src/: enumtype.rs  main.rs  models.rs  schema.rs
backend_rs/: .env  Cargo.toml
backend_rs/backend_rs/src/orm/: allergens.rs  canteens.rs  current_foods.rs  food_allergens.rs  food_ingredients.rs  foods.rs  ingredients.rs  mod.rs  ratings.rs  sea_orm_active_enums.rs  users.rs
backend_rs/src/: auth.rs  jwt.rs  main.rs  service.rs  setup.rs  userinout.rs
backend_rs/src/orm/: allergens.rs  canteens.rs  current_foods.rs  food_allergens.rs  food_ingredients.rs  foods.rs  ingredients.rs  prelude.rs  ratings.rs  sea_orm_active_enums.rs  users.rs
frontend/: package-lock.json  package.json
frontend/src/: app.html
frontend/src/lib/: index.ts  (+1 more)
frontend/static/: smui-dark.css  smui.css  spacing.css  spacing.css.map
(+9 files in other folders)
