[package]
name = "backend_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = { version = "0.12.1", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros" ] }
dotenvy = "0.15.7"
serde = {version = "1.0.130" ,features = ["derive"]}
serde_json = {version = "1.0"}
async-graphql = "4.0.4"
async-graphql-rocket = "4.0.4"


[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]
