[package]
name = "backend_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]



[dependencies.rocket_auth]
version = "0.4.0"
features = ["sqlx-postgres"]

[dependencies]
sea-orm = { version = "0.12.1", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros" ] }
dotenvy = "0.15.7"
serde = {version = "1.0.130" ,features = ["derive"]}
serde_json = {version = "1.0"}
# tokio + rustls
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls" ] }
