[package]
name = "backend_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = { version = "0.12.1", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros" ] }
dotenvy = "0.15.7"
serde = {version = "1.0.130" ,features = ["derive"]}
serde_json = {version = "1.0"}
async-graphql = "4.0.4"
async-graphql-rocket = "4.0.4"
chrono = "0.4.26"
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls" ] }
rocket-jwt = {path= "rocket-jwt"}
jsonwebtoken="8.3.0"
password-auth = "0.3.0"
scrypt = "0.11.0"



[dependencies.rocket]
version = "0.5.0-rc.3"
features = ["json"]
